--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
+    android:background="@color/white"
     tools:context=".ProfileFragment"
     android:orientation="vertical"
     android:gravity="center"
@@ -38,25 +38,33 @@
         android:enabled="false"
         android:layout_margin="10dp"
         />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:layout_weight="20">
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/baseline_rounded_corner_24"
-            android:text="Let me in"
-            android:id="@+id/login_let_me_in_btn"/>
+            android:text="Update Profile"
+            android:textColor="@color/black"
+            android:id="@+id/profile_update_btn"/>
         <ProgressBar
             android:layout_width="32dp"
             android:layout_height="wrap_content"
-            android:indeterminateTint="@color/material_dynamic_primary0"
             android:layout_gravity="center"
-            android:id="@+id/login_progress_bar"/>
+            android:id="@+id/profile_progress_bar"/>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/log_out_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="LOGOUT"/>
 
 
 
