--- a/app/src/main/res/layout/activity_login_phone_number.xml
+++ b/app/src/main/res/layout/activity_login_phone_number.xml
@@ -6,11 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:weightSum="100"
+    android:layout_margin="20dp"
     tools:context=".LoginPhoneNumberActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="20"
         android:gravity="center">
         <RelativeLayout
             android:layout_width="32dp"
@@ -31,7 +34,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/my_primary">
+            android:backgroundTint="@color/light_gray">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -45,7 +48,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/my_primary">
+            android:backgroundTint="@color/light_gray">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -60,6 +63,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:tint="@color/my_primary"
+        android:layout_weight="20"
         android:src="@drawable/phone_icon"
          />
     <TextView
@@ -69,10 +73,12 @@
         android:layout_gravity="center_vertical"
         android:textSize="25sp"
         android:letterSpacing="0.08"
+        android:layout_weight="5"
         android:textStyle="bold"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="5"
         android:gravity="center">
         
         <com.hbb20.CountryCodePicker
@@ -88,6 +94,26 @@
             android:layout_margin="10dp"
             android:background="@drawable/edit_text_rounded_corner"
             android:elevation="5dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="20"
+        android:orientation="vertical">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="send otp"
+            android:background="@drawable/btn_rounded_corner"/>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/my_primary"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"/>
+
     </LinearLayout>
 
 
