--- a/app/src/main/res/layout/activity_login_username.xml
+++ b/app/src/main/res/layout/activity_login_username.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:weightSum="100"
     android:layout_margin="20dp"
-    tools:context=".LoginOtpActivity">
+    tools:context=".LoginUsernameActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/my_primary">
+            android:backgroundTint="@color/light_gray">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/light_gray">
+            android:backgroundTint="@color/my_primary">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -64,12 +64,12 @@
         android:layout_height="150dp"
         app:tint="@color/my_primary"
         android:layout_weight="20"
-        android:src="@drawable/otp_icon"
+        android:src="@drawable/person_icon"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter OTP received"
+        android:text="Enter your Username"
         android:layout_gravity="center_vertical"
         android:textSize="25sp"
         android:letterSpacing="0.08"
@@ -82,14 +82,14 @@
         android:gravity="center">
 
 
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:hint="OTP"
-            android:inputType="number"
+            android:hint="Username"
+            android:inputType="phone"
             android:layout_margin="10dp"
-            android:maxLength="6"
             android:background="@drawable/edit_text_rounded_corner"
             android:elevation="5dp"/>
     </LinearLayout>
@@ -98,12 +98,12 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_gravity="center_vertical"
-        android:layout_weight="10"
+        android:layout_weight="20"
         android:orientation="vertical">
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="next"
+            android:text="LET ME IN"
             android:background="@drawable/btn_rounded_corner"/>
         <ProgressBar
             android:layout_width="wrap_content"
@@ -113,12 +113,6 @@
             android:layout_gravity="center"/>
 
     </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Resend OTP in 30 sec"
-        android:layout_weight="10"
-        android:gravity="center"/>
 
 
 </LinearLayout>
