--- a/app/src/main/res/layout/activity_login_otp.xml
+++ b/app/src/main/res/layout/activity_login_otp.xml
@@ -83,6 +83,7 @@
 
 
         <EditText
+            android:id="@+id/login_otp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -101,11 +102,13 @@
         android:layout_weight="10"
         android:orientation="vertical">
         <Button
+            android:id="@+id/login_next_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="next"
             android:background="@drawable/btn_rounded_corner"/>
         <ProgressBar
+            android:id="@+id/login_progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateTint="@color/my_primary"
@@ -114,6 +117,7 @@
 
     </LinearLayout>
     <TextView
+        android:id="@+id/resend_otp_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Resend OTP in 30 sec"
