--- a/app/src/main/res/layout/activity_login_phone_number.xml
+++ b/app/src/main/res/layout/activity_login_phone_number.xml
@@ -84,7 +84,9 @@
         <com.hbb20.CountryCodePicker
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/login_countrycode"/>
+            android:id="@+id/login_countrycode"
+            app:ccp_showFlag="false"
+            app:ccp_showNameCode="false"/>
 
         <EditText
             android:id="@+id/login_mobile_number"
