--- a/app/src/main/res/layout/activity_login_username.xml
+++ b/app/src/main/res/layout/activity_login_username.xml
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:hint="Username"
-            android:inputType="phone"
+            android:inputType="text|number"
             android:layout_margin="10dp"
             android:background="@drawable/edit_text_rounded_corner"
             android:elevation="5dp"/>
