--- a/app/src/main/res/layout/activity_login_username.xml
+++ b/app/src/main/res/layout/activity_login_username.xml
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:hint="Username"
-            android:inputType="text|number"
+            android:inputType="text"
             android:layout_margin="10dp"
             android:background="@drawable/edit_text_rounded_corner"
             android:elevation="5dp"/>
@@ -106,7 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="LET ME IN"
-            android:background="@drawable/btn_rounded_corner"/>
+         android:background="@drawable/btn_rounded_corner"/>
         <ProgressBar
             android:id="@+id/login_progress_bar"
             android:layout_width="wrap_content"
