--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
             android:textColor="@color/white"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"/>
-        <ImageView
+        <ImageButton
+            android:id="@+id/main_search_btn"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:src="@drawable/icon_search"
