--- a/app/src/main/res/layout/activity_search_user.xml
+++ b/app/src/main/res/layout/activity_search_user.xml
@@ -7,7 +7,7 @@
     tools:context=".SearchUserActivity">
 
     <RelativeLayout
-        android:id="@+id/main_toolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/my_primary"
@@ -15,23 +15,62 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="Search User"
             android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginStart="10dp"
-            android:layout_centerVertical="true"/>]
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/back_btn"/>]
         <ImageButton
-            android:id="@+id/main_search_btn"
+            android:id="@+id/back_btn"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/icon_search"
-            android:layout_alignParentEnd="true"
+            android:src="@drawable/icon_back"
             android:background="?attr/selectableItemBackgroundBorderless"
             app:tint="@color/white"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"/>
+            />
 
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/search_user_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
+        android:layout_margin="10dp">
+        
+        <EditText
+            android:id="@+id/search_user_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_rounded_corner"
+            android:layout_margin="10dp"
+            android:hint="Username"
+            android:padding="10dp"
+            android:elevation="4dp"
+            android:layout_toLeftOf="@id/search_user_btn"/>
+        
+        <ImageButton
+            android:id="@+id/search_user_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/icon_search"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            app:tint="@color/my_primary"
+            android:padding="4dp"
+            android:layout_margin="10dp"/>
+    </RelativeLayout>
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search_user_layout"
+        android:padding="10dp"
+        android:id="@+id/search_user_recyler_view"/>
+
+    
 
 </RelativeLayout>
