--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="my_primary">#FF5964</color>
     <color name="my_secondary">#FFE74C</color>
-    <color name="off_white">#FDFDFD</color>
+    <color name="off_white">#FAFAFA</color>
     <color name="light_gray">#C3C3C3</color>
 </resources>
