--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -13,6 +13,7 @@
         android:background="@color/my_primary"
         android:padding="10dp">
         <TextView
+            android:id="@+id/other_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Username"
@@ -42,6 +43,7 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chat_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
@@ -55,15 +57,19 @@
         android:padding="8dp">
 
         <EditText
+            android:id="@+id/chat_message_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Write message here"
             android:layout_centerInParent="true"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_toLeftOf="@id/message_send_btn"
             android:background="@drawable/edit_text_rounded_corner"
-            android:padding="10dp"
             android:elevation="4dp"
-            android:layout_toLeftOf="@id/message_send_btn"/>
+            android:hint="Write message here"
+            android:padding="10dp" />
 
         <ImageButton
             android:id="@+id/message_send_btn"
