--- a/app/src/main/res/layout/recent_chat_recycler_row.xml
+++ b/app/src/main/res/layout/recent_chat_recycler_row.xml
@@ -17,15 +17,30 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center">
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/user_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Username"
             android:textStyle="bold"/>
+
         <TextView
-            android:id="@+id/phone_text"
+            android:id="@+id/last_message_time_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="111111111"
+            />
+        
+
+        </RelativeLayout>
+            
+
+        <TextView
+            android:id="@+id/last_message_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="111111111"
