--- a/app/src/main/res/layout/recent_chat_recycler_row.xml
+++ b/app/src/main/res/layout/recent_chat_recycler_row.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/edit_text_rounded_corner"
     android:layout_margin="10dp"
     android:elevation="2dp">
@@ -24,7 +25,7 @@
             android:id="@+id/user_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Username"
+            tools:text="Username"
             android:textStyle="bold"/>
 
         <TextView
@@ -32,9 +33,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="111111111"
+            tools:text="10:00"
+            android:layout_marginEnd="10dp"
             />
-        
 
         </RelativeLayout>
             
@@ -43,7 +44,7 @@
             android:id="@+id/last_message_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="111111111"
+            tools:text="111111111"
             />
     </LinearLayout>
 
