--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:background="@drawable/circular_bg"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/my_primary"
         android:src="@drawable/baseline_person_24"
         android:scaleType="centerCrop"
         android:layout_marginBottom="40dp"/>
